[package]
name = "felix-dns"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
name = "felix_dns"
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0.99"
env_logger = "0.11.8"
log = "0.4.28"
parking_lot = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
trust-dns-proto = "0.23.2"

[dev-dependencies]
hickory-resolver = "0.25.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false