[package]
name = "felix"
version = "0.1.0"
edition = "2024"

[dependencies]
felix-dns = { path= "../felix-dns" }
hickory-resolver = "0.25.2"
tokio = { version = "1.47.1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false